--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="record_title_hint">输入记录标题</string>
     <string name="record_solved_label">处理</string>
     <string name="record_details_label">详情</string>
+    <string name="date_picker">记录时间</string>
 
+    <string name="new_record">新建记录</string>
+    <string name="show_subtitle">显示副标题</string>
+    <string name="hide_subtitle">隐藏副标题</string>
+    <string name="subtitle_format">%1$s 条 记录</string>
 </resources>
